# goit-pythonweb-hw-08

./: .gitattributes  migration_script.sql  pyproject.toml
alembic/versions/: 0a6f8d61e925_init.py  96f612b7cbe0_init.py
src/: schemas.py
src/api/: contacts.py  utils.py
src/api/const/: contacts.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/services/: contacts.py
